# 3d-classify-viewer

./: .dockerignore  Dockerfile  README.md  requirements.txt
classifyViewer/: db.sqlite3  manage.py
classifyViewer/classifyViewer/: asgi.py  settings.py  urls.py  wsgi.py
classifyViewer/config/: gunicorn.conf.py
classifyViewer/viewer/: fix_las_test.py  functions.py  mesh2pc.py  request_functions.py  urls.py  views.py
classifyViewer/viewer/static/viewer/css/: docs_styles.css  styles.css
classifyViewer/viewer/static/viewer/js/: docs_main.js  empty.html  functions.js  main.js  main_g.js  potree2-loader.js
classifyViewer/viewer/static/viewer/js/accessibility/: babylon.accessibility.js.map
classifyViewer/viewer/static/viewer/js/addons/: babylonjs.addons.d.ts  babylonjs.addons.min.js  babylonjs.addons.min.js.map  babylonjs.addons.module.d.ts
classifyViewer/viewer/static/viewer/js/babylon_js/: empty-preview.html  empty-stable.html
classifyViewer/viewer/static/viewer/js/babylon_js/accessibility/: babylon.accessibility.module.d.ts
classifyViewer/viewer/static/viewer/js/babylon_js/guiEditor/: babylon.guiEditor.max.js
classifyViewer/viewer/static/viewer/js/babylon_js/inspector/: babylon.inspector-v2.module.d.ts  babylon.inspector.d.ts
classifyViewer/viewer/static/viewer/js/babylon_js/loaders/: babylon.bvhFileLoader.min.js.map  babylon.glTF1FileLoader.min.js.map  babylon.glTF2FileLoader.js  babylon.glTFFileLoader.min.js  babylon.glTFFileLoader.min.js.map  babylon.stlFileLoader.min.js.map  babylonjs.loaders.js  babylonjs.loaders.min.js.map  babylonjs.loaders.module.d.ts
classifyViewer/viewer/static/viewer/js/babylon_js/materialsLibrary/: babylon.cellMaterial.js  babylon.cellMaterial.min.js.map  babylon.furMaterial.js  babylon.furMaterial.min.js.map  babylon.gradientMaterial.js  babylon.gridMaterial.min.js.map  babylon.lavaMaterial.js  babylon.lavaMaterial.min.js.map  babylon.mixMaterial.js  babylon.normalMaterial.min.js.map  babylon.shadowOnlyMaterial.js  babylon.shadowOnlyMaterial.min.js.map  babylon.triPlanarMaterial.js  babylon.triPlanarMaterial.min.js.map  babylon.waterMaterial.js
classifyViewer/viewer/static/viewer/js/babylon_js/nodeEditor/: babylon.nodeEditor.module.d.ts
classifyViewer/viewer/static/viewer/js/babylon_js/nodeParticleEditor/: babylon.nodeParticleEditor.d.ts
classifyViewer/viewer/static/viewer/js/babylon_js/nodeRenderGraphEditor/: babylon.nodeRenderGraphEditor.d.ts  babylon.nodeRenderGraphEditor.js  babylon.nodeRenderGraphEditor.module.d.ts
classifyViewer/viewer/static/viewer/js/babylon_js/postProcessesLibrary/: babylonjs.postProcess.module.d.ts
classifyViewer/viewer/static/viewer/js/babylon_js/proceduralTexturesLibrary/: babylon.fireProceduralTexture.min.js.map  babylon.marbleProceduralTexture.min.js.map  babylon.normalMapProceduralTexture.min.js.map  babylon.perlinNoiseProceduralTexture.min.js.map  babylon.starfieldProceduralTexture.min.js.map  babylon.woodProceduralTexture.min.js.map  babylonjs.proceduralTextures.d.ts
classifyViewer/viewer/static/viewer/js/babylon_js/serializers/: babylon.glTF2Serializer.js  babylonjs.serializers.min.js
classifyViewer/viewer/static/viewer/js/guiEditor/: babylon.guiEditor.d.ts  babylon.guiEditor.module.d.ts
classifyViewer/viewer/static/viewer/js/inspector/: babylon.inspector-v2.bundle.js  babylon.inspector-v2.d.ts  babylon.inspector.module.d.ts
classifyViewer/viewer/static/viewer/js/loaders/: babylon.glTF1FileLoader.min.js  babylon.objFileLoader.min.js.map
classifyViewer/viewer/static/viewer/js/materialsLibrary/: babylon.customMaterial.min.js.map  babylon.fireMaterial.min.js.map  babylon.gradientMaterial.min.js.map  babylon.mixMaterial.min.js.map  babylon.normalMaterial.min.js  babylon.simpleMaterial.min.js  babylon.simpleMaterial.min.js.map  babylon.skyMaterial.min.js.map  babylon.terrainMaterial.js  babylon.terrainMaterial.min.js.map  babylon.waterMaterial.min.js.map
classifyViewer/viewer/static/viewer/js/nodeEditor/: babylon.nodeEditor.d.ts  babylon.nodeEditor.max.js
classifyViewer/viewer/static/viewer/js/nodeGeometryEditor/: babylon.nodeGeometryEditor.d.ts  babylon.nodeGeometryEditor.max.js  babylon.nodeGeometryEditor.module.d.ts
classifyViewer/viewer/static/viewer/js/nodeParticleEditor/: babylon.nodeParticleEditor.max.js  babylon.nodeParticleEditor.module.d.ts
classifyViewer/viewer/static/viewer/js/postProcessesLibrary/: babylon.asciiArtPostProcess.min.js.map  babylon.digitalRainPostProcess.min.js.map  babylonjs.postProcess.min.js.map
classifyViewer/viewer/static/viewer/js/proceduralTexturesLibrary/: babylon.brickProceduralTexture.min.js.map  babylon.cloudProceduralTexture.min.js.map  babylon.grassProceduralTexture.min.js.map  babylon.roadProceduralTexture.min.js.map  babylonjs.proceduralTextures.min.js.map  babylonjs.proceduralTextures.module.d.ts
classifyViewer/viewer/static/viewer/js/serializers/: babylon.glTF2Serializer.min.js.map  babylon.objSerializer.min.js.map  babylon.stlSerializer.min.js.map  babylon.usdzSerializer.min.js.map  babylonjs.serializers.d.ts  babylonjs.serializers.min.js.map  babylonjs.serializers.module.d.ts
classifyViewer/viewer/templates/viewer/: docs_page.html  viewer_page.html
classifyViewer/viewer/utils_functions/: RF_classify.py  RF_training.py  mesh2pc.py  ply2las.py  subsample_pc.py
docs/: API_REFERENCE.md  ARCHITECTURE.md  BINARIES.md  INSTALLATION.md  USER_GUIDE.md
old_Dockerfile/: Dockerfile_v1_old_base  Dockerfile_v2_new_base
opt/: check_point_id  feature_extraction_viewer  feature_extraction_viewer_cpu  feature_extraction_viewer_gpu  las_to_feature_bin  las_to_feature_bin.old  mesh2pc  ply2las  split_las_by_binary  subsample_pc
testC++/: CMakeLists.txt  Dockerfile  check_point_id.cpp  feature_extraction_viewer.cpp  feature_extraction_viewer_cpu.cpp  feature_extraction_viewer_gpu.cpp  gpu_features.cu  gpu_features.cuh  las_to_feature_bin.cpp  mesh2pc.cpp  ply2las.cpp  split_las_by_binary.cpp  subsample_pc.cpp
